--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>CONSOLE LOG RESULTS</h1>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
